--- a/REST_API/package.json
+++ b/REST_API/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js",
-    "test": "jest"
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -19,12 +18,8 @@
     "mongoose": "^8.2.1"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.12",
-    "@types/supertest": "^6.0.2",
     "cors": "^2.8.5",
     "express": "^4.18.3",
-    "jest": "^29.7.0",
-    "supertest": "^6.3.4",
     "ts-jest": "^29.1.2"
   }
 }
