--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -1,10 +1,41 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Remove="Areas\AdminPortal\Data\**" />
+    <Compile Remove="Areas\AdminPortal\Models\**" />
+    <Compile Remove="Areas\FacultyPortal\Data\**" />
+    <Compile Remove="Areas\FacultyPortal\Models\**" />
+    <Compile Remove="Areas\StudentPortal\Data\**" />
+    <Compile Remove="Areas\StudentPortal\Models\**" />
+    <Content Remove="Areas\AdminPortal\Data\**" />
+    <Content Remove="Areas\AdminPortal\Models\**" />
+    <Content Remove="Areas\FacultyPortal\Data\**" />
+    <Content Remove="Areas\FacultyPortal\Models\**" />
+    <Content Remove="Areas\StudentPortal\Data\**" />
+    <Content Remove="Areas\StudentPortal\Models\**" />
+    <EmbeddedResource Remove="Areas\AdminPortal\Data\**" />
+    <EmbeddedResource Remove="Areas\AdminPortal\Models\**" />
+    <EmbeddedResource Remove="Areas\FacultyPortal\Data\**" />
+    <EmbeddedResource Remove="Areas\FacultyPortal\Models\**" />
+    <EmbeddedResource Remove="Areas\StudentPortal\Data\**" />
+    <EmbeddedResource Remove="Areas\StudentPortal\Models\**" />
+    <None Remove="Areas\AdminPortal\Data\**" />
+    <None Remove="Areas\AdminPortal\Models\**" />
+    <None Remove="Areas\FacultyPortal\Data\**" />
+    <None Remove="Areas\FacultyPortal\Models\**" />
+    <None Remove="Areas\StudentPortal\Data\**" />
+    <None Remove="Areas\StudentPortal\Models\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="applicationurl.json" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.12" />
@@ -13,15 +44,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Areas\AdminPortal\Data\" />
-    <Folder Include="Areas\AdminPortal\Models\" />
-    <Folder Include="Areas\FacultyPortal\Data\" />
-    <Folder Include="Areas\FacultyPortal\Models\" />
-    <Folder Include="Areas\StudentPortal\Data\" />
-    <Folder Include="Areas\StudentPortal\Models\" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <ProjectReference Include="..\BusinessLayer\BusinessLayer.csproj" />
     <ProjectReference Include="..\WebApp_Model\WebApp_Model.csproj" />
   </ItemGroup>
 
